# timesfm

./: .gitattributes  .gitignore  .style.yapf  AGENTS.md  CONTRIBUTING.md  README.md  __init__.py  development_setup.md  environment.yml  environment_cpu.yml  prophet_benchmark.parquet  pyproject.toml  requirements.txt  timesfm_benchmark.ipynb
.github/workflows/: main.yml  manual_publish.yml  publish.yml
benchmarks/: xreg_solve_vs_pinv.py
claude-skill/examples/global-temperature/: README.md
claude-skill/examples/global-temperature/output/: forecast_output.json
datasets/: download_data.sh
docs/aegis3/: ARCHITECTURE.md  OPERATIONS.md
experiments/: environment.yml  environment_cpu.yml
experiments/baselines/: timegpt_pipeline.py
experiments/extended_benchmarks/: README.md  run_timegpt.py  run_timesfm.py  utils.py
experiments/long_horizon_benchmarks/: README.md  run_eval.py
notebooks/: covariates.ipynb  finetuning.ipynb  finetuning_example.py  finetuning_torch.ipynb  finetuning_torch.py
peft/: README.md  __init__.py  adapters.py  config.py  data.py  dora.sh  fft.sh  finetune.py  finetune.sh  linear_probing.sh  lora.sh  trainer.py  usage.ipynb
src/: __init__.py  patched_decoder.py  timesfm.py
src/adapter/: __init__.py  dora_layers.py  lora_layers.py  utils.py
src/finetuning/: ._finetuning_example.py  ._finetuning_torch.py  finetuning_example.py  finetuning_strategies.py  finetuning_torch.py
src/timesfm/: __init__.py  __main__.py  abstract.py  configs.py  data_loader.py  finetuning_torch.py  patched_decoder.py  pytorch_patched_decoder.py  pytorch_timesfm_iterable_dataset.py  time_features.py  timesfm.py  timesfm_2p5.py  timesfm_base.py  timesfm_jax.py  timesfm_torch.py  xreg_lib.py
src/timesfm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/timesfm/flax/: dense.py  normalization.py  transformer.py  util.py
src/timesfm/timesfm_2p5/: BUILD  timesfm_2p5_base.py  timesfm_2p5_flax.py  timesfm_2p5_keras.py  timesfm_2p5_torch.py
src/timesfm/torch/: BUILD  dense.py  model.py  normalization.py  transformer.py  util.py
src/timesfm/train_utils/: masking.py
src/timesfm/utils/: xreg_lib.py
src/timesfm_torch/: README.md  pytorch_patched_decoder.py
tests/: __init__.py  test_base_utils.py  test_configs.py  test_force_flip_invariance.py  test_hfhub_compat.py  test_invariant_run_eval.py  test_model_loading.py  test_timesfm.py  test_timesfm_v2.py  test_torch_compile_retention.py  test_torch_layers.py  test_torch_utils.py
timesfm-forecasting/: SKILL.md
timesfm-forecasting/examples/anomaly-detection/: detect_anomalies.py
timesfm-forecasting/examples/anomaly-detection/output/: anomaly_detection.json
timesfm-forecasting/examples/covariates-forecasting/: demo_covariates.py
timesfm-forecasting/examples/covariates-forecasting/output/: covariates_metadata.json  sales_with_covariates.csv
timesfm-forecasting/examples/finetuning/: README.md  finetune_lora.py
timesfm-forecasting/examples/global-temperature/: README.md  generate_animation_data.py  generate_gif.py  generate_html.py  run_example.sh  run_forecast.py  temperature_anomaly.csv  visualize_forecast.py
timesfm-forecasting/examples/global-temperature/output/: animation_data.json  forecast_output.csv  forecast_output.json  interactive_forecast.html
timesfm-forecasting/references/: api_reference.md  data_preparation.md  system_requirements.md
timesfm-forecasting/scripts/: check_system.py  forecast_csv.py
v1/: README.md  TROUBLESHOOTING.md  pyproject.toml
v1/experiments/baselines/: __init__.py  timegpt_pipeline.py
v1/experiments/extended_benchmarks/: run_timegpt.py  run_timesfm.py  utils.py
v1/experiments/long_horizon_benchmarks/: run_eval.py
v1/notebooks/: covariates.ipynb  finetuning.ipynb  finetuning_torch.ipynb
v1/peft/: README.md  finetune.py  finetune.sh  usage.ipynb
v1/src/adapter/: __init__.py  dora_layers.py  utils.py
v1/src/finetuning/: finetuning_example.py  finetuning_torch.py
v1/src/timesfm/: __init__.py  data_loader.py  patched_decoder.py  pytorch_patched_decoder.py  time_features.py  timesfm_base.py  timesfm_jax.py  timesfm_torch.py  xreg_lib.py
v1/tests/: test_data_loader.py  test_timesfm.py  test_training_mask.py
