[project]
name = "timesfm"
version = "2.0.0"
description = "A time series foundation model."
authors = [
    {name = "Rajat Sen", email = "senrajat@google.com"},
    {name = "Yichen Zhou", email = "yichenzhou@google.com"},
    {name = "Abhimanyu Das", email = "abhidas@google.com"},
    {name = "Petros Mol", email = "pmol@google.com"},
    {name = "Michael Chertushkin", email = "chertushkinmichael@gmail.com"},
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26.4",
    "huggingface_hub[cli]>=0.23.0",
    "safetensors>=0.5.3",
]

[project.optional-dependencies]
torch = [
    "torch>=2.0.0",
]
flax = [
    "flax",
    "optax",
    "einshape",
    "orbax-checkpoint",
    "jaxtyping",
    "jax[cuda]"
]
xreg = [
    "jax[cuda]",
    "scikit-learn",
]

[tool.ruff]
line-length = 88
indent-width = 2

[tool.ruff.lint]
select = ["E", "F", "I"]
# F722/F821: false positives from jaxtyping annotations (e.g. Float[Array, "b n h d"])
ignore = ["E501", "E402", "E731", "E722", "E741", "F841", "F403", "F405", "F722", "F821"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.uv]
# Install with: uv sync --extra torch  (or --extra flax)

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

